--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
                     <ul>
                         <li><img src="assets/map-pin.svg" alt="localização" class="shake" >Fortaleza, CE - Brasil</li>
                         <li><img src="assets/briefcase.svg" alt="trabalho" class="shake" >Somente estudando</li>
-                        <li><img src="assets/github.svg" alt="github" class="shake" ><a href="https://github.com/ildsonLeno" target="_blank">Meu GitHub</a></li>
-                        <li><img src="assets/linkedin.svg" alt="linkedin" class="shake" ><a href="https://www.linkedin.com/in/ildsonleno/" target="_blank">Meu LinkedIn</a></li>
-                        <li><img src="assets/twitter.svg" alt="twitter" class="shake" ><a href="https://twitter.com/IldsonLeno" target="_blank">Meu Twitter</a></li>
+                        <li><img src="assets/github.svg" alt="github" class="shake"><a href="https://github.com/ildsonLeno" target="_blank" rel="noopener">Meu GitHub</a></li>
+                        <li><img src="assets/linkedin.svg" alt="linkedin" class="shake" ><a href="https://www.linkedin.com/in/ildsonleno/" target="_blank" rel="noopener">Meu LinkedIn</a></li>
+                        <li><img src="assets/twitter.svg" alt="twitter" class="shake" ><a href="https://twitter.com/IldsonLeno" target="_blank" rel="noopener">Meu Twitter</a></li>
                         <li><img src="assets/mail.svg" alt="email" class="shake" ><a href="mailto:ildson.leno@outlook.com">ildson.leno@outlook.com</a></li>
                     </ul>
                 </div>
@@ -36,8 +36,8 @@
                     <h2>Tecnologias</h2>
                     <figcaption>
                         <figure><a href="https://developer.mozilla.org/pt-BR/docs/Learn/HTML/Introduction_to_HTML" target="_blank=">html</a></figure>
-                        <figure><a href="https://developer.mozilla.org/pt-BR/docs/Web/CSS" target="_blank">css</a></figure>
-                        <figure><a href="https://developer.mozilla.org/pt-BR/docs/Web/JavaScript" target="_blank">javascript</a></figure>
+                        <figure><a href="https://developer.mozilla.org/pt-BR/docs/Web/CSS" target="_blank" rel="noopener">css</a></figure>
+                        <figure><a href="https://developer.mozilla.org/pt-BR/docs/Web/JavaScript" target="_blank" rel="noopener">javascript</a></figure>
                     </figcaption>
                 </div>
     
@@ -59,13 +59,13 @@
                 <section>
                     <div class="project-section">
                         <h2>Meus Projetos</h2>
-                        <a href="https://github.com/ildsonLeno?tab=repositories" target="_blank">Veja todos</a>
+                        <a href="https://github.com/ildsonLeno?tab=repositories" target="_blank" rel="noopener">Veja todos</a>
                     </div>
                     <div class="github">
                         <div class="github-1">
                             <div class="project-name-1">
                                 <ul>
-                                    <li><img src="assets/folder.svg" id="imgs-git" alt="folder"><a href="https://github.com/ildsonLeno/MaratonaExplorer2.0" target="_blank">MaratonaExplorer2.0</a></li>
+                                    <li><img src="assets/folder.svg" class="imgs-git" alt="folder"><a href="https://github.com/ildsonLeno/MaratonaExplorer2.0" target="_blank" rel="noopener">MaratonaExplorer2.0</a></li>
                                 </ul>
                             </div>
                             <div>
@@ -73,9 +73,9 @@
                             </div>
                             <footer>
                                 <div class="pins">
-                                    <img src="assets/star.svg" id="imgs-git" alt="starstarret">
+                                    <img src="assets/star.svg" class="imgs-git" alt="starstarret">
                                     <p>1</p>
-                                    <img src="assets/git-branch.svg" id="imgs-git" alt="branch">
+                                    <img src="assets/git-branch.svg" class="imgs-git" alt="branch">
                                     <p>8</p>
                                 </div>
                                 <div class="lang">
@@ -90,7 +90,7 @@
                         <div class="github-2">
                             <div class="project-name-1">
                                 <ul>
-                                    <li><img src="assets/folder.svg" id="imgs-git" alt="folder"><a href="https://github.com/ildsonLeno/MaratonaExplorer3.0" target="_blank">MaratonaExplorer3.0</a></li>
+                                    <li><img src="assets/folder.svg" class="imgs-git" alt="folder"><a href="https://github.com/ildsonLeno/MaratonaExplorer3.0" target="_blank" rel="noopener">MaratonaExplorer3.0</a></li>
                                 </ul>
                             </div>
                             <div>
@@ -98,9 +98,9 @@
                             </div>
                             <footer>
                                 <div class="pins">
-                                    <img src="assets/star.svg" id="imgs-git" alt="starstarret">
+                                    <img src="assets/star.svg" class="imgs-git" alt="starstarret">
                                     <p>1</p>
-                                    <img src="assets/git-branch.svg" id="imgs-git" alt="branch">
+                                    <img src="assets/git-branch.svg" class="imgs-git" alt="branch">
                                     <p>14</p>
                                 </div>
                                 <div class="lang">
@@ -140,7 +140,7 @@
         </div>
         <footer class="footer">
             &copy; 2022 by
-            <a href="https://github.com/ildsonLeno" target="_blank"> Ildson Leno</a>
+            <a href="https://github.com/ildsonLeno" target="_blank" rel="noopener"> Ildson Leno</a>
             todos os direitos reservados.
         </footer>
     </body>
